--- a/style.css
+++ b/style.css
@@ -51,9 +51,17 @@ section {
   flex-wrap: wrap;
 }
 .gallery img {
-  width: 300px;
+  width: 250px;
   border: 2px solid #444;
   border-radius: 5px;
+}
+.main-image {
+  width: 90%;
+  max-width: 800px;
+  display: block;
+  margin: 0 auto 30px auto;
+  border: 3px solid #00ffc8;
+  border-radius: 10px;
 }
 form {
   display: flex;
